topbar fixed mobile and scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,15 @@ html, body, #root {
   color: white;
   height: 100%;
   margin: 0;
+
   padding: 0;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
 }
